--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
     background-image:linear-gradient(125deg,rgba(58,58,158,0.5),rgba(136,136,2.6,0.5)),url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
     background-position:center;
     background-repeat:no-repeat;
-    background-size:cover;
+    background-size:auto;
     font-size:18px;
   }
   
