--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
+body{
+    color:white;
+    font-family:Tahoma;
+    background-image:linear-gradient(125deg,rgba(58,58,158,0.5),rgba(136,136,2.6,0.5)),url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size:cover;
+    font-size:18px;
+  }
 
   h1{
     color:red;
     text-align:center;
     font-weight:bold;
   }
+
   p{
     color:black;
     text-align:center;
